--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
   <ul id="todos-list">
     <li class="todo" ng-repeat="todo in todoList.todos">
       <input type="checkbox">
-      todo title
+        {{todo.title}} 
       <input type="button" value="X">
     </li>
   </ul>
-  3 items left
-  <nav class="tab-selector">All</nav>
-  <nav class="tab-selector">Active</nav>
-  <nav class="tab-selector">Complete</nav>
-  <nav class="tab-selector">Clear All</nav>
+  <p>
+  <span>3</span> items left
+  </p>
+  <nav id="tabs">
+    <button class="tab-selector">All</button>
+    <button class="tab-selector">Active</button>
+    <button class="tab-selector">Complete</button>
+    <button class="tab-selector">Clear All</button>
+  </nav>
   
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-resource/angular-resource.min.js"></script>
