count total todos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </li>
   </ul>
   <p>
-  <span>3</span> items left
+  <span id="todoCount">{{todoList.todos.length}}</span> items left
   </p>
   <nav id="tabs">
     <button class="tab-selector">All</button>
